	* Replaced Unix newlines by platform newlines
	* Optimized an often used function
	* Added 'insert spaces instead of tabulations' option for the O'Caml editor
	* Added conversion from tabs to spaces
	* Spell checking of comments and documentation comments
	* Keep leading and trailing newlines as-is when formatting a selection
	* Hyperlink on open directive opens a ".ml" file when there is no ".mli" file
	* Project paths are now also contributed from referenced projects
	* Option to override ocamlbuild tools paths
	* When a folder is added or removed in an ocaml project, this project's paths are automatically changed accordingly
	* Ctrl+Clicking on "B" in "module A = B" now opens B.mli or B.ml
	* Simplified synchronization in Ocamlbuild builder and makefile builder
	* Replaced linked external resources by uses of the new Eclipse File System API to open workspace-external files in editors. This means no more ".DebuggerSourceLookup" and ".HyperlinksLinkedFiles", which should also fix incompatibility with eclipsedarcs.
	* Opening a module's/interface's counterpart now works on external resources
	* Fixed a layout issue in project paths properties page
	* Improved O'Caml paths preference page
	* Removed a check that prevented using the Cygwin version of ocamldebug on Windows
	
* 1.2.1 (April 21 2008)
	* Remote debugging support, patch submitted by Jonathan Knowles
	* Updated documentation for debugging under Windows and remote debugging
	
* 1.2.2
	* Support for ocamldebug under Windows, patch submitted by Dmitry Bely
	* Can separate run file and debugged file (patch from forum member khooyp)
	* Redirected messages to the console and handled uncaught exceptions (patch from forum member khooyp)
	* Suppressed removal of spaces before commas and semicolons inside comments and strings
	
* 1.2.3
	* Corrected spell-checking of ocamldoc comments
	* Restored special tab completions which had stopped working because of a bug
	 
	
	
	
	